--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Manrope:wght@200..800&display=swap");
 :root,
 [data-bs-theme="light"] {
   --bs-blue: #0d6efd;
@@ -10289,5 +10290,123 @@ textarea.form-control-lg {
 
   .d-print-none {
     display: none !important; } }
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth; }
+
+body {
+  margin: 0 auto;
+  padding: 0; }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit; }
+
+h1, .h1,
+h2,
+.h2,
+h4,
+.h4 {
+  font-family: "Anton", sans-serif;
+  font-weight: 400;
+  font-style: normal; }
+
+h1, .h1 {
+  color: #ffd15b;
+  font-size: clamp(1.5rem, 4vw, 2.75rem);
+  line-height: 1.5;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 2rem; }
+
+h3, .h3 {
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal; }
+
+p {
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal; }
+
+form input {
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal; }
+
+nav {
+  position: absolute;
+  z-index: 10000; }
+
+.navbar {
+  padding: 3rem 0; }
+
+.navbar-brand {
+  margin: 0 auto; }
+  @media (min-width: 576px) {
+    .navbar-brand {
+      margin: initial; } }
+
+header {
+  background-image: url(../img/header/recipe@2x.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 667px;
+  position: relative;
+  z-index: 1000;
+  margin-top: -9rem;
+  overflow: hidden; }
+  header > div {
+    z-index: 100; }
+  header::before {
+    content: "";
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    z-index: 10; }
+  header form {
+    position: relative;
+    align-items: center; }
+  header .form-control {
+    border: none;
+    border-radius: 0.625rem 0.625rem;
+    padding: 1rem 3.5rem 1rem 1rem;
+    font-size: 0.85rem;
+    text-overflow: ellipsis; }
+    @media (min-width: 576px) {
+      header .form-control {
+        padding: 1.5rem 1.5rem 1.5rem 2.1875rem; } }
+  header .btn {
+    border-radius: 0.625rem 0.625rem;
+    position: absolute;
+    right: 0.75rem;
+    padding: 0;
+    height: 2rem;
+    width: 2rem; }
+    @media (min-width: 576px) {
+      header .btn {
+        height: 3.25rem;
+        width: 3.25rem; } }
+    header .btn i {
+      padding: 0.85rem;
+      height: 2rem;
+      width: 2rem;
+      font-size: 1rem; }
+      @media (min-width: 576px) {
+        header .btn i {
+          font-size: 1.75rem; } }
+      header .btn i::before {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%); }
 
 /*# sourceMappingURL=style.css.map */
