Add cards components

--- a/css/style.css
+++ b/css/style.css
@@ -10320,11 +10320,28 @@ h1, .h1 {
   text-align: center;
   margin-bottom: 2rem; }
 
+h2, .h2 {
+  font-size: 1.125rem;
+  margin-bottom: 2rem; }
+
 h3, .h3 {
   font-family: "Manrope", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
-  font-style: normal; }
+  font-style: normal;
+  font-size: 0.75rem;
+  color: #7a7a7a;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 2px; }
+
+h3 + p, .h3 + p {
+  margin-bottom: 2rem; }
+
+span {
+  color: #7a7a7a;
+  font-size: 0.875rem; }
 
 h4, .h4 {
   margin-bottom: 0; }
@@ -10333,7 +10350,9 @@ p {
   font-family: "Manrope", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
-  font-style: normal; }
+  font-style: normal;
+  font-size: 0.875rem;
+  line-height: 1.25; }
 
 form input {
   font-family: "Manrope", sans-serif;
@@ -10386,7 +10405,7 @@ header {
     text-overflow: ellipsis; }
     @media (min-width: 576px) {
       header .form-control {
-        padding: 1.5rem 1.5rem 1.5rem 2.1875rem; } }
+        padding: 1.5rem 5rem 1.5rem 2.1875rem; } }
   header .btn {
     border-radius: 0.625rem 0.625rem;
     position: absolute;
@@ -10435,11 +10454,11 @@ main {
       main .btn-group > .btn-group:not(:last-child) {
         margin-right: 4rem; } }
 
-.btn-group.tag {
+.btn-group.filters-content {
   margin: 1rem 0rem;
   width: 100%; }
   @media (min-width: 768px) {
-    .btn-group.tag {
+    .btn-group.filters-content {
       width: auto; } }
 .btn-group > .btn {
   flex-grow: initial;
@@ -10474,11 +10493,13 @@ main {
       min-width: 195px; } }
   .btn-group .dropdown-menu .form-control {
     position: relative;
-    padding: 0.5rem 1.5rem 0.5rem 0.5rem;
+    padding: 0.5rem 1.85rem 0.5rem 0.5rem;
     font-size: 0.85rem;
     text-overflow: ellipsis;
     border-radius: 0;
     margin-bottom: 1rem; }
+    .btn-group .dropdown-menu .form-control:focus {
+      border-color: #7a7a7a; }
   .btn-group .dropdown-menu .dropdown-item {
     padding: 0.25rem 0;
     font-size: 0.875rem; }
@@ -10488,16 +10509,58 @@ main {
 
 .number-of-recipes {
   order: 1;
-  padding: 1rem 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   text-align: center; }
   @media (min-width: 992px) {
     .number-of-recipes {
-      order: 2; } }
+      order: 2;
+      text-align: right; } }
 
 .filters {
   order: 2; }
   @media (min-width: 992px) {
     .filters {
       order: 1; } }
+
+.cards a {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%; }
+  .cards a:hover {
+    text-decoration: none; }
+    .cards a:hover article {
+      filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1)); }
+.cards article {
+  transition: all 0.3s ease; }
+
+.card {
+  position: relative;
+  border-radius: 1.5rem 1.5rem;
+  border: none;
+  height: 100%; }
+  .card-body {
+    padding: 2rem 1.5rem 3rem 1.5rem; }
+    .card-body p {
+      margin-bottom: 0; }
+    .card-body span {
+      margin-bottom: 1rem;
+      display: block; }
+  .card-tag {
+    position: absolute;
+    display: inline-block;
+    background-color: #ffd15b;
+    color: black;
+    border-radius: 50px 50px;
+    top: 1.25rem;
+    right: 1.25rem;
+    padding: 0.5rem 1rem;
+    font-size: 0.75rem; }
+  .card-img-top {
+    max-height: 254px;
+    object-fit: cover;
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem; }
 
 /*# sourceMappingURL=style.css.map */
