--- a/css/style.css
+++ b/css/style.css
@@ -10406,26 +10406,56 @@ header {
     @media (min-width: 576px) {
       header .form-control {
         padding: 1.5rem 5rem 1.5rem 2.1875rem; } }
-  header .btn {
+  header .btn-search {
     border-radius: 0.625rem 0.625rem;
     position: absolute;
     right: 0.75rem;
     padding: 0;
     height: 2rem;
-    width: 2rem; }
+    width: 2rem;
+    transition: all 0.3s ease; }
+    header .btn-search:hover {
+      background-color: #ffd15b;
+      border: 1px solid #ffd15b; }
+      header .btn-search:hover i {
+        color: black; }
     @media (min-width: 576px) {
-      header .btn {
+      header .btn-search {
         height: 3.25rem;
         width: 3.25rem; } }
-    header .btn i {
+    header .btn-search i {
       padding: 0.85rem;
       height: 2rem;
       width: 2rem;
       font-size: 1rem; }
       @media (min-width: 576px) {
-        header .btn i {
+        header .btn-search i {
           font-size: 1.75rem; } }
-      header .btn i::before {
+      header .btn-search i::before {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%); }
+  header .btn-clear {
+    border-radius: 0.625rem 0.625rem;
+    position: absolute;
+    right: 3rem;
+    padding: 0;
+    height: 2rem;
+    width: 2rem;
+    color: #7a7a7a; }
+    @media (min-width: 576px) {
+      header .btn-clear {
+        right: 4.5rem; } }
+    header .btn-clear i {
+      padding: 0.85rem;
+      height: 2rem;
+      width: 2rem;
+      font-size: 1rem; }
+      @media (min-width: 576px) {
+        header .btn-clear i {
+          font-size: 1.75rem; } }
+      header .btn-clear i::before {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -10454,6 +10484,37 @@ main {
       main .btn-group > .btn-group:not(:last-child) {
         margin-right: 4rem; } }
 
+.number-of-recipes {
+  order: 1;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-align: center; }
+  @media (min-width: 992px) {
+    .number-of-recipes {
+      order: 2;
+      text-align: right; } }
+
+.filters {
+  order: 2; }
+  @media (min-width: 992px) {
+    .filters {
+      order: 1; } }
+
+.btn-group .dropdown-toggle::after {
+  display: inline-block;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
+  font-family: "Font Awesome 5 Free";
+  content: "\f078";
+  font-weight: 900;
+  border-top: none;
+  border-right: none;
+  border-bottom: none;
+  border-left: none; }
+.btn-group .dropdown-toggle.show::after {
+  font-family: "Font Awesome 5 Free";
+  content: "\f077";
+  font-weight: 900; }
 .btn-group.filters-content {
   margin: 1rem 0rem;
   width: 100%; }
@@ -10472,6 +10533,8 @@ main {
   border-radius: 0.75rem; }
 .btn-group > .btn-group .dropdown-menu .btn {
   padding: 0.5rem; }
+.btn-group > .btn-group .dropdown-menu .btn-clear {
+  right: 2.5rem; }
 .btn-group > .btn-group:not(:first-child) > .btn, .btn-group > .btn-group:not(:last-child) > .btn {
   border-radius: 0.75rem;
   min-width: 100%; }
@@ -10486,42 +10549,33 @@ main {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   min-width: 100%;
-  padding: 1rem;
+  padding-bottom: 0;
   margin-top: -2px !important; }
+  .btn-group .dropdown-menu li:first-child {
+    padding: 1rem;
+    padding-top: 0; }
   @media (min-width: 768px) {
     .btn-group .dropdown-menu {
       min-width: 195px; } }
   .btn-group .dropdown-menu .form-control {
     position: relative;
-    padding: 0.5rem 1.85rem 0.5rem 0.5rem;
+    padding: 0.5rem 3rem 0.5rem 0.5rem;
     font-size: 0.85rem;
     text-overflow: ellipsis;
     border-radius: 0;
     margin-bottom: 1rem; }
     .btn-group .dropdown-menu .form-control:focus {
       border-color: #7a7a7a; }
+  .btn-group .dropdown-menu .dropdown-item:last-child {
+    padding-bottom: 0.5rem; }
   .btn-group .dropdown-menu .dropdown-item {
-    padding: 0.25rem 0;
+    padding: 0.25rem 1rem;
     font-size: 0.875rem; }
+    .btn-group .dropdown-menu .dropdown-item:hover {
+      background-color: #ffd15b; }
   .btn-group .dropdown-menu .btn {
     position: absolute;
     right: 1rem; }
-
-.number-of-recipes {
-  order: 1;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  text-align: center; }
-  @media (min-width: 992px) {
-    .number-of-recipes {
-      order: 2;
-      text-align: right; } }
-
-.filters {
-  order: 2; }
-  @media (min-width: 992px) {
-    .filters {
-      order: 1; } }
 
 .cards a {
   display: flex;
