--- a/scss/style.scss
+++ b/scss/style.scss
@@ -368,13 +368,21 @@ main {
     border: none;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    border-bottom-left-radius: 0.75rem;
+    border-bottom-right-radius: 0.75rem;
     min-width: 100%;
     padding-bottom: 0;
     margin-top: -2px !important;
+    padding-top: 0;
 
     li:first-child {
       padding: 1rem;
       padding-top: 0;
+    }
+
+    li:last-child .dropdown-item {
+      border-bottom-left-radius: 0.75rem;
+      border-bottom-right-radius: 0.75rem;
     }
 
     @include media-breakpoint-up(md) {
@@ -387,7 +395,6 @@ main {
       font-size: 0.85rem;
       text-overflow: ellipsis;
       border-radius: 0;
-      margin-bottom: 1rem;
 
       &:focus {
         border-color: $secondary;
@@ -399,7 +406,7 @@ main {
     }
 
     .dropdown-item {
-      padding: 0.25rem 1rem;
+      padding: 0.5rem 1rem;
       font-size: 0.875rem;
 
       &:hover {
