display none search cancel button

--- a/css/style.css
+++ b/css/style.css
@@ -10303,6 +10303,9 @@ body {
 *:after {
   box-sizing: inherit; }
 
+input[type="search"]::-webkit-search-cancel-button {
+  display: none; }
+
 h1, .h1,
 h2,
 .h2,
