--- a/css/style.css
+++ b/css/style.css
@@ -10308,9 +10308,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 h1, .h1,
 h2,
-.h2,
-h4,
-.h4 {
+.h2 {
   font-family: "Anton", sans-serif;
   font-weight: 400;
   font-style: normal; }
@@ -10489,6 +10487,12 @@ main {
   padding-top: 1rem;
   padding-bottom: 1rem;
   text-align: center; }
+  .number-of-recipes p {
+    font-family: "Anton", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.3125rem;
+    margin-bottom: 0; }
   @media (min-width: 992px) {
     .number-of-recipes {
       order: 2;
