--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,8 +41,7 @@ $body-color: #ededed;
 
 // Typography
 h1,
-h2,
-h4 {
+h2 {
   font-family: $primary-font;
   font-weight: 400;
   font-style: normal;
@@ -279,6 +278,14 @@ main {
   padding-top: 1rem;
   padding-bottom: 1rem;
   text-align: center;
+
+  p {
+    font-family: $primary-font;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.3125rem;
+    margin-bottom: 0;
+  }
 
   @include media-breakpoint-up(lg) {
     order: 2;
