--- a/scss/style.scss
+++ b/scss/style.scss
@@ -327,7 +327,7 @@ main {
   }
 
   &.filters-content {
-    margin: 1rem 0rem;
+    margin: 1.5rem 0;
     width: 100%;
 
     @include media-breakpoint-up(md) {
@@ -500,11 +500,50 @@ main {
 
 // Tags
 .tags {
+  @include media-breakpoint-up(md) {
+    padding: 0 2.375rem;
+  }
+
+  @include media-breakpoint-up(lg) {
+    padding: 0 0.75rem;
+  }
+
+  .list-group-horizontal > .list-group-item:first-child:not(:last-child),
+  .list-group-horizontal > .list-group-item:last-child:not(:first-child) {
+    border-radius: 0.75rem;
+  }
+
+  .list-group-horizontal {
+    flex-wrap: nowrap;
+    overflow: scroll;
+
+    @include media-breakpoint-up(md) {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      overflow: initial;
+    }
+
+    @include media-breakpoint-up(lg) {
+      justify-content: flex-start;
+    }
+  }
+
   .list-group-item {
     border: none;
     border-radius: 0.75rem;
     background-color: $highlight-color;
     padding: 0 0;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+
+    @include media-breakpoint-up(md) {
+      margin-right: 0;
+    }
+
+    @include media-breakpoint-up(lg) {
+      margin-right: 1rem;
+    }
 
     .btn {
       display: flex;
