Add text truncate for paragraph inside card

--- a/css/style.css
+++ b/css/style.css
@@ -10609,6 +10609,12 @@ main {
   height: 100%; }
   .card-body {
     padding: 2rem 1.5rem 3rem 1.5rem; }
+    .card-body > p {
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 4;
+      /* Change this line if you want. In this case it trimmed the text to 4 lines. */
+      overflow: hidden; }
     .card-body p {
       margin-bottom: 0; }
     .card-body span {
