--- a/css/style.css
+++ b/css/style.css
@@ -10536,30 +10536,39 @@ main {
   justify-content: space-between;
   display: flex;
   align-items: center; }
-.btn-group > .btn-group .btn {
-  padding: 1rem 1rem;
-  border-radius: 0.75rem; }
-.btn-group > .btn-group .dropdown-menu.show {
-  max-height: 18.5rem;
-  overflow-y: scroll;
-  overflow-x: hidden; }
-  .btn-group > .btn-group .dropdown-menu.show a {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis; }
-.btn-group > .btn-group .dropdown-menu .btn {
-  padding: 0.5rem; }
-.btn-group > .btn-group .dropdown-menu .btn-clear {
-  right: 2.5rem; }
-.btn-group > .btn-group:not(:first-child) > .btn, .btn-group > .btn-group:not(:last-child) > .btn {
-  border-radius: 0.75rem;
-  min-width: 100%; }
-  @media (min-width: 768px) {
-    .btn-group > .btn-group:not(:first-child) > .btn, .btn-group > .btn-group:not(:last-child) > .btn {
-      min-width: 195px; } }
-  .btn-group > .btn-group:not(:first-child) > .btn.show, .btn-group > .btn-group:not(:last-child) > .btn.show {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0; }
+.btn-group > .btn-group {
+  display: flex;
+  flex-direction: column; }
+  .btn-group > .btn-group .btn {
+    padding: 1rem 1rem;
+    border-radius: 0.75rem; }
+  .btn-group > .btn-group .dropdown-menu {
+    position: relative; }
+    .btn-group > .btn-group .dropdown-menu__container {
+      position: relative;
+      max-height: 16.5rem;
+      overflow-y: scroll;
+      overflow-x: hidden; }
+    .btn-group > .btn-group .dropdown-menu form {
+      padding: 1rem;
+      padding-top: 0; }
+    .btn-group > .btn-group .dropdown-menu.show a {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis; }
+    .btn-group > .btn-group .dropdown-menu .btn {
+      padding: 0.5rem; }
+    .btn-group > .btn-group .dropdown-menu .btn-clear {
+      right: 2.5rem; }
+  .btn-group > .btn-group:not(:first-child) > .btn, .btn-group > .btn-group:not(:last-child) > .btn {
+    border-radius: 0.75rem;
+    min-width: 100%; }
+    @media (min-width: 768px) {
+      .btn-group > .btn-group:not(:first-child) > .btn, .btn-group > .btn-group:not(:last-child) > .btn {
+        min-width: 195px; } }
+    .btn-group > .btn-group:not(:first-child) > .btn.show, .btn-group > .btn-group:not(:last-child) > .btn.show {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0; }
 .btn-group .dropdown-menu {
   border: none;
   border-top-left-radius: 0;
@@ -10570,9 +10579,9 @@ main {
   padding-bottom: 0;
   margin-top: -2px !important;
   padding-top: 0; }
-  .btn-group .dropdown-menu li:first-child {
-    padding: 1rem;
-    padding-top: 0; }
+  .btn-group .dropdown-menu .btn-group {
+    display: flex;
+    flex-direction: column; }
   .btn-group .dropdown-menu li:last-child .dropdown-item {
     border-bottom-left-radius: 0.75rem;
     border-bottom-right-radius: 0.75rem; }
