--- a/css/style.css
+++ b/css/style.css
@@ -10435,6 +10435,7 @@ header {
         left: 50%;
         transform: translate(-50%, -50%); }
   header .btn-clear {
+    display: none;
     border-radius: 0.625rem 0.625rem;
     position: absolute;
     right: 3rem;
@@ -10568,7 +10569,8 @@ main {
     .btn-group > .btn-group .dropdown-menu .btn {
       padding: 0.5rem; }
     .btn-group > .btn-group .dropdown-menu .btn-clear {
-      right: 2.5rem; }
+      right: 2.5rem;
+      display: none; }
   .btn-group > .btn-group:not(:first-child) > .btn, .btn-group > .btn-group:not(:last-child) > .btn {
     border-radius: 0.75rem;
     min-width: 100%; }
