--- a/scss/style.scss
+++ b/scss/style.scss
@@ -205,6 +205,7 @@ header {
   }
 
   .btn-clear {
+    display: none;
     border-radius: 0.625rem 0.625rem;
     position: absolute;
     right: 3rem;
@@ -399,6 +400,7 @@ main {
 
       .btn-clear {
         right: 2.5rem;
+        display: none;
       }
     }
 
