--- a/css/style.css
+++ b/css/style.css
@@ -10682,12 +10682,9 @@ main {
   @media (min-width: 768px) {
     .tags .list-group-horizontal {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       flex-wrap: wrap;
       overflow: initial; } }
-  @media (min-width: 992px) {
-    .tags .list-group-horizontal {
-      justify-content: flex-start; } }
 .tags .list-group-item {
   border: none;
   border-radius: 0.75rem;
@@ -10695,9 +10692,6 @@ main {
   padding: 0 0;
   margin-right: 1rem;
   margin-bottom: 1rem; }
-  @media (min-width: 768px) {
-    .tags .list-group-item {
-      margin-right: 0; } }
   @media (min-width: 992px) {
     .tags .list-group-item {
       margin-right: 1rem; } }
