--- a/scss/style.scss
+++ b/scss/style.scss
@@ -400,7 +400,7 @@ main {
 
       .btn-clear {
         right: 2.5rem;
-        display: none;
+        // display: none;
       }
     }
 
@@ -610,5 +610,26 @@ main {
         font-size: 1.25rem;
       }
     }
+  }
+}
+
+// Error message
+.error-message {
+  color: #ff4e60;
+  font-size: 0.85rem;
+  display: block;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  margin-top: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.filters {
+  .error-message {
+    color: #ff4e60;
+    font-size: 0.85rem;
+    display: block;
+    padding: 0.5rem;
+    background-color: #fff;
   }
 }
