--- a/css/style.css
+++ b/css/style.css
@@ -10569,7 +10569,8 @@ main {
     .btn-group > .btn-group .dropdown-menu .btn {
       padding: 0.5rem; }
     .btn-group > .btn-group .dropdown-menu .btn-clear {
-      right: 2.5rem; }
+      right: 2.5rem;
+      display: none; }
   .btn-group > .btn-group:not(:first-child) > .btn, .btn-group > .btn-group:not(:last-child) > .btn {
     border-radius: 0.75rem;
     min-width: 100%; }
